# opengl-starter-project

./: .gitmodules  CMakeLists.txt  README.md
libs/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
